--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 	"dependencies": {
 		"@clerk/nextjs": "^4.27.1",
 		"@hookform/resolvers": "^3.3.2",
-		"@prisma/client": "^5.5.2",
+		"@libsql/client": "^0.5.6",
+		"@prisma/adapter-libsql": "^5.11.0",
+		"@prisma/client": "^5.11.0",
 		"@radix-ui/react-checkbox": "^1.0.4",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -49,7 +51,7 @@
 		"eslint": "^8",
 		"eslint-config-next": "14.0.2",
 		"postcss": "^8",
-		"prisma": "^5.5.2",
+		"prisma": "^5.11.0",
 		"tailwindcss": "^3.3.0",
 		"typescript": "^5"
 	}
